Initial Set of Changes

--- a/index.hbs
+++ b/index.hbs
@@ -5,7 +5,7 @@ into the {body} of the default.hbs template --}}
 
 {{!-- Featured Post --}}
 {{#is "home"}}
-{{#get "posts" filter="featured:true" limit="1" as |featured_post|}}
+{{!-- {{#get "posts" filter="featured:true" limit="1" as |featured_post|}}
     {{#foreach featured_post}}
         <article id="banner">
             <div class="content">
@@ -25,7 +25,8 @@ into the {body} of the default.hbs template --}}
             {{/if}}
         </article>
     {{/foreach}}
-{{/get}}
+{{/get}} --}}
+<iframe frameborder="no" src="https://playlist.megaphone.fm?p=ADL8806925450&light=true" width="100%" height="482"></iframe>
 {{/is}}
 
 {{!-- Posts --}}
