--- a/post.hbs
+++ b/post.hbs
@@ -9,9 +9,9 @@ into the {body} of the default.hbs template --}}
     <header class="main content">
         <span class="date">{{date format="MMMM D, YYYY"}}</span>
         <h1>{{title}}</h1>
-        {{#if custom_excerpt}}
+        {{!-- {{#if custom_excerpt}}
             <p class="content">{{custom_excerpt}}</p>
-        {{/if}}
+        {{/if}} --}}
     </header>
 
     {{#if feature_image}}
